# xhs_automate

./: .gitignore  README.md
backend/: .env.example  app.py  conf.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  scheduler.py
backend/app/api/: agent.py  health.py  image.py  note.py  prompt.py  static.py  translate.py  user.py  workflow.py
backend/app/models/: agent.py  image.py  user.py  variable_definitions.py  workflow.py  workflow_variable.py
backend/app/utils/: logger.py  response.py  util.py
backend/comfyui_api/: README.md  main.py  requirements.txt
backend/comfyui_api/api/: api_helpers.py  open_websocket.py
backend/comfyui_api/utils/actions/: load_workflow.py  prompt_to_image.py
backend/comfyui_api/workflows/: base_workflow.json
backend/spider/: pintest_spider.py
backend/translate/: tencent_translate.py
backend/xhs_upload/: auto_upload.py
frontend/: auto-imports.d.ts  components.d.ts  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: config.ts  functions.ts  request.ts
frontend/src/components/: AppContent.vue  DataForm.vue  NavMenu.vue
frontend/src/router/: index.ts
frontend/src/views/: AgentPage.vue  GeneratePage.vue  PublishPage.vue  ThemePage.vue  UserPage.vue  WorkflowPage.vue
